Fix image width on small screen

--- a/app/static/css/prediction.css
+++ b/app/static/css/prediction.css
@@ -435,6 +435,11 @@ html {
         width: 100%;
     }
 
+    .grid-row .right-image,
+    .grid-row .left-image {
+        margin-right: -20px;
+    }
+
 }
 
 @media (max-width: 450px) {
